--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,9 +17,9 @@ jobs:
 
     steps:
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    - name: Set up Go 1.x
+    - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version-file: './go.mod'
@@ -27,13 +27,12 @@ jobs:
     - name: Build
       run: go build -v .
 
+    - name: Vet
+      run: go vet .
+
     - name: Test
       run: go test -v -coverprofile coverage.out && go tool cover -html coverage.out -o coverage.html
 
     - name: Format
       if: matrix.os == 'ubuntu-latest'
       run: if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then exit 1; fi
-
-    - name: Upload coverage to Codecov
-      if: matrix.os == 'ubuntu-latest'
-      uses: codecov/codecov-action@v3
