--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,9 +20,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version-file: './go.mod'
+        go-version: '1.12'
+        check-latest: true
 
     - name: Build
       run: go build -v .
